changed the markdown of the bonus questions

--- a/miniproject1.ipynb
+++ b/miniproject1.ipynb
@@ -831,7 +831,7 @@
     "what I've noticed:\n",
     "- Positive correlation (0.74)\n",
     "- Higher RAM generally indicates higher prices\n",
-    "- Significant variation within RAM categories"
+    "- A lot of variation within RAM categories"
    ]
   },
   {
@@ -1058,27 +1058,28 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# My bonus questions analysis\n",
     "\n",
-    "## Question 1: Price Distribution by CPU Type\n",
+    "## Question 1: \n",
     "Analysis of the relationship between CPU type (i3, i5, i7) and laptop prices:\n",
-    "- Clear price increase with CPU tier progression (i3 -> i5 -> i7)\n",
+    "- I can see that the price increase with CPU tier progression (i3 -> i5 -> i7)\n",
     "- i7 processors show the highest average prices\n",
-    "- Price ranges overlap between CPU types\n",
     "- Outliers present in all categories\n",
     "- This suggests that CPU type is a significant factor in determining laptop price\n",
     "\n",
-    "## Question 2: Relationship Between Weight and Price\n",
+    "## Question 2: \n",
     "Analysis of the correlation between laptop weight and price:\n",
-    "- Positive but moderate correlation (correlation coefficient shown in output)\n",
-    "- General trend shows slight price increase with weight increase\n",
-    "- Large scatter of points indicates weight is not a strong determinant of price\n",
-    "- Many expensive laptops are actually lightweight, suggesting premium for portability\n",
-    "- The relationship is not as straightforward as might be expected\n",
-    "\n",
-    "These findings suggest that while both CPU type and weight influence laptop prices, \n",
-    "CPU type appears to be a more reliable predictor of price than weight."
+    "- Positive correlation (correlation coefficient shown in output)\n",
+    "- Slight price increase with weight increase\n",
+    "- Not a strong determinant of price\n",
+    "- Many expensive laptops are lightweight\n",
+    "- The relationship is not as straightforward as I expected"
    ]
   }
  ],
