Update miniproject1.ipynb notebook

--- a/miniproject1.ipynb
+++ b/miniproject1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
     "        self.firing_rate = firing_rate\n",
     "    \n",
     "    def activate(self, stimulus):\n",
-    "        \"\"\"Calculate firing rate based on stimulus strength\"\"\"\n",
+    "        \"\"\"Calculating the firing rate based on stimulus strength\"\"\"\n",
     "        pass\n",
     "\n",
     "class SensoryNeuron(Neuron):\n",
@@ -48,7 +48,6 @@
     "        pass\n",
     "    \n",
     "    def light_detection(self, light_intensity):\n",
-    "        \"\"\"Specific light detection behavior\"\"\"\n",
     "        pass\n",
     "\n",
     "class Mechanoreceptor(SensoryNeuron):\n",
@@ -60,7 +59,6 @@
     "        pass\n",
     "    \n",
     "    def pressure_detection(self, pressure):\n",
-    "        \"\"\"Specific pressure detection behavior\"\"\"\n",
     "        pass\n",
     "\n",
     "class AlphaMotorNeuron(MotorNeuron):\n",
@@ -371,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -411,94 +409,11 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Read the CSV file\n",
+    "# First of all I made it read the dataset:\n",
     "df = pd.read_csv('laptop_price - dataset.csv')\n",
     "\n",
-    "# Display the first few rows to check if data was loaded correctly\n",
+    "# Display me the first few rows to check if data was loaded correctly\n",
     "print(df.head())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'Price_euros'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "File \u001b[1;32mc:\\Users\\sagih\\Documents\\שנה ב סמסטר א\\מדעי המוח\\פייתון למתקדמים\\python2\\empy_python_package\\venv\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3805\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3804\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m-> 3805\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   3806\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
-      "File \u001b[1;32mindex.pyx:167\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mindex.pyx:196\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mpandas\\\\_libs\\\\hashtable_class_helper.pxi:7081\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mpandas\\\\_libs\\\\hashtable_class_helper.pxi:7089\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'Price_euros'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[19], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# Plot the price of all laptops\u001b[39;00m\n\u001b[0;32m      4\u001b[0m plt\u001b[38;5;241m.\u001b[39mfigure(figsize\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m12\u001b[39m, \u001b[38;5;241m6\u001b[39m))\n\u001b[1;32m----> 5\u001b[0m plt\u001b[38;5;241m.\u001b[39mplot(\u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mPrice_euros\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mb.\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      6\u001b[0m plt\u001b[38;5;241m.\u001b[39mtitle(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLaptop Prices\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      7\u001b[0m plt\u001b[38;5;241m.\u001b[39mxlabel(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLaptop Index\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "File \u001b[1;32mc:\\Users\\sagih\\Documents\\שנה ב סמסטר א\\מדעי המוח\\פייתון למתקדמים\\python2\\empy_python_package\\venv\\Lib\\site-packages\\pandas\\core\\frame.py:4102\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   4100\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m   4101\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[1;32m-> 4102\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   4103\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[0;32m   4104\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
-      "File \u001b[1;32mc:\\Users\\sagih\\Documents\\שנה ב סמסטר א\\מדעי המוח\\פייתון למתקדמים\\python2\\empy_python_package\\venv\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3812\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3807\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[0;32m   3808\u001b[0m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc\u001b[38;5;241m.\u001b[39mIterable)\n\u001b[0;32m   3809\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[0;32m   3810\u001b[0m     ):\n\u001b[0;32m   3811\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[1;32m-> 3812\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[0;32m   3813\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[0;32m   3814\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[0;32m   3815\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[0;32m   3816\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[0;32m   3817\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'Price_euros'"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 1200x600 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "# Plot the price of all laptops\n",
-    "plt.figure(figsize=(12, 6))\n",
-    "plt.plot(df['Price_euros'], 'b.')\n",
-    "plt.title('Laptop Prices')\n",
-    "plt.xlabel('Laptop Index')\n",
-    "plt.ylabel('Price (euros)')\n",
-    "plt.grid(True)\n",
-    "plt.show()\n",
-    "\n",
-    "# Print some basic statistics\n",
-    "print(f\"Number of laptops: {len(df)}\")\n",
-    "print(f\"Price range: {df['Price_euros'].min():.2f} - {df['Price_euros'].max():.2f} euros\")\n",
-    "print(f\"Average price: {df['Price_euros'].mean():.2f} euros\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Column names in the dataset:\n",
-      "Index(['Company', 'Product', 'TypeName', 'Inches', 'ScreenResolution',\n",
-      "       'CPU_Company', 'CPU_Type', 'CPU_Frequency (GHz)', 'RAM (GB)', 'Memory',\n",
-      "       'GPU_Company', 'GPU_Type', 'OpSys', 'Weight (kg)', 'Price (Euro)'],\n",
-      "      dtype='object')\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Column names in the dataset:\") #because I tried to understand what caused an error\n",
-    "print(df.columns)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    " I had an error because I wrote \"euros\" accidentally instead of \"euro\" and it took me a lot of time to undesrtand that. here's my second atemmpt:"
    ]
   },
   {
@@ -538,7 +453,7 @@
     "plt.grid(True)\n",
     "plt.show()\n",
     "\n",
-    "# Print some statistics\n",
+    "# Print statistics\n",
     "print(f\"Number of laptops: {len(df)}\")\n",
     "print(f\"Price range: {df['Price (Euro)'].min():.2f} - {df['Price (Euro)'].max():.2f} euros\")\n",
     "print(f\"Average price: {df['Price (Euro)'].mean():.2f} euros\")"
@@ -599,7 +514,7 @@
     "# Calculate average price by company\n",
     "avg_price_by_company = df.groupby('Company')['Price (Euro)'].mean().sort_values(ascending=False)\n",
     "\n",
-    "# Display results\n",
+    "# Show results\n",
     "print(\"Average laptop prices by company:\")\n",
     "print(avg_price_by_company)\n",
     "\n",
@@ -611,7 +526,7 @@
     "plt.xlabel('Company')\n",
     "plt.ylabel('Average Price (Euro)')\n",
     "plt.grid(True)\n",
-    "plt.tight_layout()  # prevents the x-labels from being cut off\n",
+    "plt.tight_layout()  # I don't want the x labels to be cut off\n",
     "plt.show()"
    ]
   },
@@ -634,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +563,7 @@
     }
    ],
    "source": [
-    "# Display all unique operating systems in the dataset\n",
+    "# Show me all the unique operating systems in the dataset\n",
     "print(\"Unique operating systems in the dataset:\")\n",
     "print(df['OpSys'].unique())"
    ]
@@ -678,9 +593,9 @@
     }
    ],
    "source": [
-    "# Function to standardize OS names\n",
+    "# In order to standardize the OS names\n",
     "def standardize_os(os_name):\n",
-    "    os_name = str(os_name).lower()  # Converting it to lowercase for easier comparison\n",
+    "    os_name = str(os_name).lower()  # Converting it to lowercase \n",
     "    \n",
     "    if 'mac' in os_name:\n",
     "        return 'macOS'\n",
@@ -872,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -922,7 +837,7 @@
     "print(\"\\nCount of each storage type:\")\n",
     "print(df['Storage_Type'].value_counts())\n",
     "\n",
-    "# Display a few examples to verify\n",
+    "# Display a few examples\n",
     "print(\"\\nSample rows with original Memory and new Storage_Type:\")\n",
     "print(df[['Memory', 'Storage_Type']].head(10))"
    ]
@@ -1070,16 +985,15 @@
     "Analysis of the relationship between CPU type (i3, i5, i7) and laptop prices:\n",
     "- I can see that the price increase with CPU tier progression (i3 -> i5 -> i7)\n",
     "- i7 processors show the highest average prices\n",
-    "- Outliers present in all categories\n",
-    "- This suggests that CPU type is a significant factor in determining laptop price\n",
+    "- I can tell that CPU type is a significant factor in determining laptop price\n",
     "\n",
     "## Question 2: \n",
     "Analysis of the correlation between laptop weight and price:\n",
-    "- Positive correlation (correlation coefficient shown in output)\n",
-    "- Slight price increase with weight increase\n",
+    "- Positive correlation\n",
+    "- I see just a slight price increase with weight increase\n",
     "- Not a strong determinant of price\n",
-    "- Many expensive laptops are lightweight\n",
-    "- The relationship is not as straightforward as I expected"
+    "- Many expensive laptops are actually lightweight\n",
+    "- Overall the relationship is not as straightforward as I expected"
    ]
   }
  ],
