Update miniproject1.ipynb notebook

--- a/miniproject1.ipynb
+++ b/miniproject1.ipynb
@@ -348,9 +348,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Implementation of a downsampling function that preserves maxima and minima points in a sinusoidal signal.\n",
     "- Input: 5Hz sinusoidal signal sampled at 0.01s intervals\n",
-    "- Output: ~20% of original signal length while maintaining key characteristics"
+    "- Output: ~20% of original signal length"
    ]
   },
   {
@@ -629,9 +628,9 @@
    "metadata": {},
    "source": [
     "- Windows is leading with 1101 laptops\n",
-    "- Followed by No OS (66), Linux (58)\n",
+    "- After Windows there are No OS (66) and Linux (58)\n",
     "- Chrome OS (27) and macOS (21) less common\n",
-    "- Android least common (2 laptops)"
+    "- Android at the bottom (2 laptops)"
    ]
   },
   {
